--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
             <h1 class="gunname"></h1>
         </div>
         <div class='ui-content' id="gunimage" data-role="content">
-            <img class="gunpng" src="" onclick="shoot()" onload="resizeimg(this)">
+            <img id="shootbtn" class="gunpng" src="" onclick="shoot()" onload="resizeimg(this)">
         </div>
         <div data-role="footer" data-position="fixed" data-tap-toggle="false">
             <div>
