--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
+    <script src="js/jquery.blockUI.js"></script>
 </head>
 <body>
     <div data-role="page" id="main" data-theme="b">
@@ -42,10 +43,7 @@
             <h1 class="gunname"></h1>
         </div>
         <div data-role="content">
-            <img class="gunpng" src="" onclick="shoot()" onload="resizeimg(this)">
-        </div>
-        <div data-role="footer" data-position="fixed" data-tap-toggle="false">
-            <table>
+            <table class="ui-responsive">
 
                 <tr>
                     <td>
@@ -84,6 +82,9 @@
                 </tr>
 
             </table>
+        </div>
+        <div data-role="footer" data-position="fixed" data-tap-toggle="false">
+
 
         </div>
     </div>
